feat: services, mappers and controllers
